AUTOMAKE_OPTIONS = 1.5 foreign subdir-objects

bin_PROGRAMS = game

AM_LDFLAGS = @SDL_LIBS@
AM_CPPFLAGS = @warning_cflags@ @SDL_CFLAGS@

game_SOURCES = \
	../src/color.cpp \
	../src/color.hpp \
	../src/main.cpp \
	../src/model.cpp \
	../src/model.hpp \
	../src/object.cpp \
	../src/object.hpp \
	../src/obstacle.cpp \
	../src/obstacle.hpp \
	../src/world.cpp \
	../src/world.hpp
